[gd_scene load_steps=5 format=3 uid="uid://dlkljw5p2yjxb"]

[ext_resource type="Theme" uid="uid://duumt3ib4xkid" path="res://resources/themes/default_theme.tres" id="1_vjtd5"]
[ext_resource type="Script" path="res://scenes/gui/settings.gd" id="2_s44au"]
[ext_resource type="Script" path="res://scenes/gui/flat_button.gd" id="3_2rcop"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_dde8i"]
thickness = 5

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_vjtd5")

[node name="Settings" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_vjtd5")
script = ExtResource("2_s44au")
metadata/_edit_group_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="Settings"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="Settings/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "ui.settings"
horizontal_alignment = 1

[node name="Separator" type="VBoxContainer" parent="Settings/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Settings/VBoxContainer/Separator"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "settings.volume"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Settings/VBoxContainer/Separator"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_dde8i")

[node name="Control" type="Control" parent="Settings/VBoxContainer/Separator"]
custom_minimum_size = Vector2(0, 13.2)
layout_mode = 2

[node name="BGMVolume" type="HBoxContainer" parent="Settings/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="Settings/VBoxContainer/BGMVolume"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "settings.bgm_volume"

[node name="HSlider" type="HSlider" parent="Settings/VBoxContainer/BGMVolume"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = -100.0
max_value = 20.0

[node name="AudioVolume" type="HBoxContainer" parent="Settings/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="Settings/VBoxContainer/AudioVolume"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "settings.audio_volume"

[node name="HSlider" type="HSlider" parent="Settings/VBoxContainer/AudioVolume"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = -100.0
max_value = 20.0

[node name="Separator2" type="VBoxContainer" parent="Settings/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Settings/VBoxContainer/Separator2"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "settings.team"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Settings/VBoxContainer/Separator2"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_dde8i")

[node name="Control" type="Control" parent="Settings/VBoxContainer/Separator2"]
custom_minimum_size = Vector2(0, 13.2)
layout_mode = 2

[node name="LeftTeamName" type="HBoxContainer" parent="Settings/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="Settings/VBoxContainer/LeftTeamName"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "settings.left_team_name"

[node name="TextEdit" type="TextEdit" parent="Settings/VBoxContainer/LeftTeamName"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "速度"
placeholder_text = "settings.team_name"
scroll_fit_content_height = true

[node name="RightTeamName" type="HBoxContainer" parent="Settings/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="Settings/VBoxContainer/RightTeamName"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "settings.right_team_name"

[node name="TextEdit" type="TextEdit" parent="Settings/VBoxContainer/RightTeamName"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "速度"
placeholder_text = "settings.team_name"
scroll_fit_content_height = true

[node name="Separator3" type="VBoxContainer" parent="Settings/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Settings/VBoxContainer/Separator3"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "settings.others"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Settings/VBoxContainer/Separator3"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_dde8i")

[node name="Control" type="Control" parent="Settings/VBoxContainer/Separator3"]
custom_minimum_size = Vector2(0, 13.2)
layout_mode = 2

[node name="Language" type="HBoxContainer" parent="Settings/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="Settings/VBoxContainer/Language"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "settings.language"

[node name="OptionButton" type="OptionButton" parent="Settings/VBoxContainer/Language"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
item_count = 2
selected = 0
popup/item_0/text = "简体中文"
popup/item_0/id = 0
popup/item_1/text = "English"
popup/item_1/id = 1

[node name="BackButton" type="Button" parent="."]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
offset_left = 12.0
offset_top = 12.0
offset_right = 131.0
offset_bottom = 65.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "ui.back"
flat = true
script = ExtResource("3_2rcop")

[connection signal="value_changed" from="Settings/VBoxContainer/BGMVolume/HSlider" to="Settings" method="_on_bgm_volume_value_changed"]
[connection signal="value_changed" from="Settings/VBoxContainer/AudioVolume/HSlider" to="Settings" method="_on_audio_volume_value_changed"]
[connection signal="text_changed" from="Settings/VBoxContainer/LeftTeamName/TextEdit" to="Settings" method="_on_left_team_name_text_changed"]
[connection signal="text_changed" from="Settings/VBoxContainer/RightTeamName/TextEdit" to="Settings" method="_on_right_team_name_text_changed"]
[connection signal="item_selected" from="Settings/VBoxContainer/Language/OptionButton" to="Settings" method="_on_option_button_item_selected"]
[connection signal="button_up" from="BackButton" to="Settings" method="_on_back_button_button_up"]
[connection signal="mouse_entered" from="BackButton" to="BackButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="BackButton" to="BackButton" method="_on_mouse_exited"]
